# rust-weather

./: Cargo.toml  readme.md
src/: forecast.rs  lib.rs  main.rs  scale.rs  weather_client.rs
src/forecast/: json.rs
