[package]
name = "weather"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.31"
drawille = "0.3.0"
reqwest = { version = "0.11", features = ["blocking", "json"]}
serde = "1.0.192"
serde_derive = "1.0.192"
serde_json = "1.0.108"
windows = { version = "0.51", features = ["Devices_Geolocation", "Foundation"]}